Adding generic event + autogen
